logs/gts_scheduler.log.2025-09-03
[INFO] 2025-09-03 15:44:16 | rental_scheduler.models | __init__:1257 | Initializing AbsoluteFileSystemStorage with location: None
[INFO] 2025-09-03 15:44:16 | rental_scheduler.models | __init__:1257 | Initializing AbsoluteFileSystemStorage with location: None
[WARNING] 2025-09-03 15:44:16 | rental_scheduler.utils.network | <module>:23 | pywin32 not available - Windows network paths may not work correctly: No module named 'win32net'
[INFO] 2025-09-03 15:44:18 | rental_scheduler.models | __init__:1257 | Initializing AbsoluteFileSystemStorage with location: None
[ERROR] 2025-09-03 15:44:31 | django.request | log_response:241 | Internal Server Error: /
Traceback (most recent call last):
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\core\handlers\base.py", line 220, in _get_response
    response = response.render()
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\response.py", line 114, in render
    self.content = self.rendered_content
                   ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\response.py", line 90, in rendered_content
    template = self.resolve_template(self.template_name)
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\response.py", line 72, in resolve_template
    return select_template(template, using=self.using)
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\loader.py", line 42, in select_template
    return engine.get_template(template_name)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\backends\django.py", line 33, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\engine.py", line 177, in get_template
    template, origin = self.find_template(template_name)
                       ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\engine.py", line 159, in find_template
    template = loader.get_template(name, skip=skip)
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
        contents,
    ...<2 lines>...
        self.engine,
    )
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ~~~~~~~~~~~~~~~~~~~~~^^
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\base.py", line 196, in compile_nodelist
    return parser.parse()
           ~~~~~~~~~~~~^^
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\base.py", line 510, in parse
    raise self.error(token, e)
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\base.py", line 508, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\loader_tags.py", line 295, in do_extends
    nodelist = parser.parse()
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\base.py", line 510, in parse
    raise self.error(token, e)
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\base.py", line 508, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\loader_tags.py", line 234, in do_block
    nodelist = parser.parse(("endblock",))
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\base.py", line 510, in parse
    raise self.error(token, e)
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\base.py", line 508, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\loader_tags.py", line 228, in do_block
    raise TemplateSyntaxError(
        "'%s' tag with name '%s' appears more than once" % (bits[0], block_name)
    )
django.template.exceptions.TemplateSyntaxError: 'block' tag with name 'modal_content' appears more than once
[WARNING] 2025-09-03 15:44:31 | django.request | log_response:241 | Not Found: /favicon.ico
[ERROR] 2025-09-03 15:44:33 | django.request | log_response:241 | Internal Server Error: /
Traceback (most recent call last):
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\core\handlers\exception.py", line 55, in inner
    response = get_response(request)
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\core\handlers\base.py", line 220, in _get_response
    response = response.render()
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\response.py", line 114, in render
    self.content = self.rendered_content
                   ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\response.py", line 90, in rendered_content
    template = self.resolve_template(self.template_name)
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\response.py", line 72, in resolve_template
    return select_template(template, using=self.using)
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\loader.py", line 42, in select_template
    return engine.get_template(template_name)
           ~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\backends\django.py", line 33, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\engine.py", line 177, in get_template
    template, origin = self.find_template(template_name)
                       ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\engine.py", line 159, in find_template
    template = loader.get_template(name, skip=skip)
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\loaders\cached.py", line 57, in get_template
    template = super().get_template(template_name, skip)
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\loaders\base.py", line 28, in get_template
    return Template(
        contents,
    ...<2 lines>...
        self.engine,
    )
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\base.py", line 154, in __init__
    self.nodelist = self.compile_nodelist()
                    ~~~~~~~~~~~~~~~~~~~~~^^
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\base.py", line 196, in compile_nodelist
    return parser.parse()
           ~~~~~~~~~~~~^^
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\base.py", line 510, in parse
    raise self.error(token, e)
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\base.py", line 508, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\loader_tags.py", line 295, in do_extends
    nodelist = parser.parse()
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\base.py", line 510, in parse
    raise self.error(token, e)
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\base.py", line 508, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\loader_tags.py", line 234, in do_block
    nodelist = parser.parse(("endblock",))
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\base.py", line 510, in parse
    raise self.error(token, e)
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\base.py", line 508, in parse
    compiled_result = compile_func(self, token)
  File "C:\Users\steph\AppData\Local\Programs\Python\Python313\Lib\site-packages\django\template\loader_tags.py", line 228, in do_block
    raise TemplateSyntaxError(
        "'%s' tag with name '%s' appears more than once" % (bits[0], block_name)
    )
django.template.exceptions.TemplateSyntaxError: 'block' tag with name 'modal_content' appears more than once
